--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
+  <!-- Default Theme -->
+  <link id="theme-css" rel="stylesheet" href="assets/themes/aura-light-indigo/theme.css">
 </head>
 <body>
   <app-root></app-root>
